Crash: Snapping tool crashes using quaternion rotation when object is duplicated #45402

Closed
opened 2015-07-10 14:24:01 +02:00 by marc dion · 9 comments

System Information
OSX-10.9, i5, 16GB
Radeon 6770m, 512MB

Blender Version
I noticed the problem with the build from July 9th, 2015 and then tested several versions going back to 2.73, it's there for all of them.

Short description of error

Blender crashes with a specific combination of Snap tool settings when using Quaternion rotations as soon as an object is duplicated. It happens with both Shift+d and Alt-d.

The settings are Snap During Transform; Snap To Face; Target Active; Align To Snapping Target; Project To Surface Of Other Objects

Here is a screen-grab of the settings for the Snapping tool

snapToFacesActiveAlignRotProject.png

snapToFacesActiveAlignRotProject1.blend

Exact steps for others to reproduce the error

Open the attached .blend file and use Alt+d on the tree branch. Blender crashes for me every time.

**System Information** OSX-10.9, i5, 16GB Radeon 6770m, 512MB **Blender Version** I noticed the problem with the build from July 9th, 2015 and then tested several versions going back to 2.73, it's there for all of them. **Short description of error** Blender crashes with a specific combination of Snap tool settings when using Quaternion rotations as soon as an object is duplicated. It happens with both Shift+d and Alt-d. The settings are Snap During Transform; Snap To Face; Target Active; Align To Snapping Target; Project To Surface Of Other Objects Here is a screen-grab of the settings for the Snapping tool ![snapToFacesActiveAlignRotProject.png](https://archive.blender.org/developer/F205510/snapToFacesActiveAlignRotProject.png) [snapToFacesActiveAlignRotProject1.blend](https://archive.blender.org/developer/F205512/snapToFacesActiveAlignRotProject1.blend) **Exact steps for others to reproduce the error** Open the attached .blend file and use Alt+d on the tree branch. Blender crashes for me every time.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by marc dion 2015-07-10 14:24:01 +02:00
Author

Added subscriber: @MarcClintDion

Added subscriber: @MarcClintDion

Added subscriber: @sindra1961

Added subscriber: @sindra1961

Blender stops(does not react) when I duplicate it with EDIT mode.
I think that I do not mind any "Target".

Blender stops(does not react) when I duplicate it with EDIT mode. I think that I do not mind any "Target".

If it is the object that Quaternion rotation is set in Rotation mode, this occurs by the snap setting.
It occurred in primitive plane.

If it is the object that Quaternion rotation is set in Rotation mode, this occurs by the snap setting. It occurred in primitive plane.

Added subscribers: @Sergey, @ThomasDinges, @mont29

Added subscribers: @Sergey, @ThomasDinges, @mont29

I cannot reproduce any crash here (linux64), not even with a debug build and ASAN. This could be an issue with the OpenGL driver maybe… Not sure how you could try to use software OpenGL on MAC OSX though, maybe @ThomasDinges or @Sergey know?

I cannot reproduce any crash here (linux64), not even with a debug build and ASAN. This could be an issue with the OpenGL driver maybe… Not sure how you could try to use software OpenGL on MAC OSX though, maybe @ThomasDinges or @Sergey know?

This issue was referenced by 406b9aa7b1

This issue was referenced by 406b9aa7b1ead0ff2757a463bc7efe9fdcee5fbe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45402
No description provided.